; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refs.c_peel_error.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refs.c_peel_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ERROR_INVALID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"the reference '%s' cannot be peeled - %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i8*)* @peel_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @peel_error(i32 %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @git_reference_name(i32* %8)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @git_error_set(i32 %7, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %9, i8* %10)
  %12 = load i32, i32* %4, align 4
  ret i32 %12
}

declare dso_local i32 @git_error_set(i32, i8*, i32, i8*) #1

declare dso_local i32 @git_reference_name(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
